crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/check_stdin_write_successfully.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write --stdin-file-path file.vue
```

# Input messages

```block
<script setup lang="ts">
import {      Button  as Button  }   from  "./components/Button.vue"   ;
import *     as         vueUse  from  "vue-use"   ;

delete a.c;
</script>
<template></template>
```

# Emitted Messages

```block
<script setup lang="ts">
import * as vueUse from "vue-use";
import { Button } from "./components/Button.vue";

delete a.c;
</script>
<template></template>
```

```block
file.vue:2:13 lint/correctness/noUnusedImports  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This import is unused.
  
    1 │ <script setup lang="ts">
  > 2 │ import * as vueUse from "vue-use";
      │             ^^^^^^
    3 │ import { Button } from "./components/Button.vue";
    4 │ 
  
  i Unused imports might be the result of an incomplete refactoring.
  
  i Unsafe fix: Remove the unused imports.
  
    1 │ import·*·as·vueUse·from·"vue-use";
      │ ----------------------------------

```

```block
file.vue:3:8 lint/correctness/noUnusedImports  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This import is unused.
  
    1 │ <script setup lang="ts">
    2 │ import * as vueUse from "vue-use";
  > 3 │ import { Button } from "./components/Button.vue";
      │        ^^^^^^^^^^
    4 │ 
    5 │ delete a.c;
  
  i Unused imports might be the result of an incomplete refactoring.
  
  i Unsafe fix: Remove the unused imports.
  
    1 1 │   import * as vueUse from "vue-use";
    2   │ - import·{·Button·}·from·"./components/Button.vue";
    3 2 │   
    4 3 │   delete a.c;
  

```
