crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/embedded_bindings_are_tracked_correctly.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.vue`

```vue
<script>
import { Component } from "./component.vue";
let hello = "Hello World";
</script>

<script>
let greeting = "Hello World";
function reasonText() {
	return "foo"
}
</script>


<template>
    <span>{hello}</span>
    <span>{notDefined}</span>
    <span>{greeting}</span>
    <Component />
    <span class="dc-reason">{{ reasonText() }}</span>
</template>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
