crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/format_stdin_write_successfully.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write --stdin-file-path file.vue
```

# Input messages

```block
<script setup lang="ts">
import     { type     something } from "file.vue";
const hello  :      string      = "world";
</script>
<template></template>
```

# Emitted Messages

```block
<script setup lang="ts">
import { type something } from "file.vue";
const hello: string = "world";
</script>
<template></template>
```
